<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbistro"
    tools:context=".bistro_activities.EditProfile">

    <ScrollView
        android:id="@+id/scroll_edit_profile"
        android:layout_width="356dp"
        android:layout_height="601dp"
        android:layout_marginTop="152dp"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/round_btn"
                android:drawablePadding="10dp"
                android:ems="10"
                android:padding="20dp"
                android:text="Note that your username cannot be changed."
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="311dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/search_design"
                android:drawableStart="@drawable/name_account"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="9dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/first_name_edit"
                android:layout_width="311dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/search_design"
                android:drawableStart="@drawable/name_account"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="9dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/middle_name_edit"
                android:layout_width="311dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/search_design"
                android:drawableStart="@drawable/name_account"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/middle_name"
                android:inputType="textPersonName"
                android:padding="9dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/last_name_edit"
                android:layout_width="311dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/search_design"
                android:drawableStart="@drawable/name_account"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="9dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="311dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/search_design"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/email_address_edit"
                android:layout_width="311dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/search_design"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="9dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/phone_number_edit"
                android:layout_width="311dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/search_design"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/phone_number_required"
                android:inputType="phone"
                android:padding="9dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/save_edit"
                android:layout_width="311dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/account_btn"
                android:padding="9dp"
                android:text="Save"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cancel_edit"
                android:layout_width="311dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="140dp"
                android:background="@drawable/account_btn"
                android:padding="9dp"
                android:text="Cancel"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>