<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9C69A"
    tools:context=".ui.slideshow.LoginFragment">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="130dp"
        android:layout_height="123dp"
        android:src="@drawable/menu_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="601dp"
        android:background="@drawable/round_edges_with_stroke"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_login">

        <EditText
            android:id="@+id/username_login"
            android:layout_width="311dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="65dp"
            android:autofillHints=""
            android:background="@drawable/search_design"
            android:drawableStart="@drawable/name_account"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="9dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="311dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/search_design"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_btn"
            android:padding="9dp"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/clickable_text_login"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="140dp"
            android:text="Don't have an account? Sign up"
            android:textAlignment="center"
            android:textColor="@color/image_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>