<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbistro2"
    tools:context=".bistro_activities.LoginActivity">


    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="561dp"
        android:layout_marginBottom="160dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="Sign In"
            android:textAlignment="center"
            android:textColor="@color/search"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/username_logina"
            android:layout_width="311dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:background="@drawable/search_design"
            android:drawableStart="@drawable/name_account"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="9dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/password_logina"
            android:layout_width="311dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/search_design"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/button_logina"
            android:layout_width="311dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/account_btn"
            android:padding="9dp"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/go_back"
            android:layout_width="311dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/account_btn"
            android:text="Go Back"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_logina"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="14dp"
            android:text="Don't have an account? Sign up"
            android:textAlignment="center"
            android:textColor="@color/image_button" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>